--- a/WcfStudent/bin/WcfStudent.dll.config
+++ b/WcfStudent/bin/WcfStudent.dll.config
@@ -1,19 +1,22 @@
 ﻿<?xml version="1.0"?>
 <configuration>
-
-	<connectionStrings >
-		<add
-			 name="myConnectionString"
-			 connectionString="Server=LAPTOP-6L4C6OAM\SQLEXPRESS;Database=GINF3;User ID=yassine;Password=yassine1;Trusted_Connection=False;"
-			 providerName="System.Data.SqlClient"/>
-	</connectionStrings>
-
-	<appSettings>
-    <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
+  <connectionStrings>
+    <add name="myConnectionString" connectionString="Server=LAPTOP-6L4C6OAM\SQLEXPRESS;Database=GINF3;User ID=yassine;Password=yassine1;Trusted_Connection=False;" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
+  <appSettings>
+    <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true"/>
   </appSettings>
+  <!--
+    Pour obtenir une description des modifications de web.config, voir http://go.microsoft.com/fwlink/?LinkId=235367.
+
+    Les attributs suivants peuvent être définis dans la balise <httpRuntime>.
+      <system.Web>
+        <httpRuntime targetFramework="4.6.1" />
+      </system.Web>
+  -->
   <system.web>
-    <compilation debug="true" targetFramework="4.7" />
-    <httpRuntime targetFramework="4.7"/>
+    <compilation debug="true" targetFramework="4.6.1"/>
+    <httpRuntime targetFramework="4.6.1"/>
   </system.web>
   <system.serviceModel>
     <behaviors>
@@ -27,9 +30,9 @@
       </serviceBehaviors>
     </behaviors>
     <protocolMapping>
-        <add binding="basicHttpsBinding" scheme="https" />
-    </protocolMapping>    
-    <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
+      <add binding="basicHttpsBinding" scheme="https"/>
+    </protocolMapping>
+    <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true"/>
   </system.serviceModel>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true"/>
@@ -39,5 +42,4 @@
       -->
     <directoryBrowse enabled="true"/>
   </system.webServer>
-
 </configuration>
